--- a/SpaceMission.cfg
+++ b/SpaceMission.cfg
@@ -31,12 +31,12 @@
 -M
 -$M16384,1048576
 -K$00400000
--LE"D:\Eigene Dateien\Borland Studio-Projekte\Bpl"
--LN"D:\Eigene Dateien\Borland Studio-Projekte\Bpl"
--U"VCL_DELPHIX_D6;VCL_PJVERSIONINFO"
--O"VCL_DELPHIX_D6;VCL_PJVERSIONINFO"
--I"VCL_DELPHIX_D6;VCL_PJVERSIONINFO"
--R"VCL_DELPHIX_D6;VCL_PJVERSIONINFO"
+-LE"C:\Users\Daniel Marschall\Documents\Borland Studio-Projekte\Bpl"
+-LN"C:\Users\Daniel Marschall\Documents\Borland Studio-Projekte\Bpl"
+-U"VCL_DELPHIX_D6"
+-O"VCL_DELPHIX_D6"
+-I"VCL_DELPHIX_D6"
+-R"VCL_DELPHIX_D6"
 -w-HIDDEN_VIRTUAL
 -w-UNSAFE_TYPE
 -w-UNSAFE_CODE
