--- a/LevEdit.cfg
+++ b/LevEdit.cfg
@@ -31,8 +31,8 @@
 -M
 -$M16384,1048576
 -K$00400000
--LE"D:\Eigene Dateien\Borland Studio-Projekte\Bpl"
--LN"D:\Eigene Dateien\Borland Studio-Projekte\Bpl"
+-LE"C:\Users\Daniel Marschall\Documents\Borland Studio-Projekte\Bpl"
+-LN"C:\Users\Daniel Marschall\Documents\Borland Studio-Projekte\Bpl"
 -U"VCL_DELPHIX_D6;VCL_PJVERSIONINFO"
 -O"VCL_DELPHIX_D6;VCL_PJVERSIONINFO"
 -I"VCL_DELPHIX_D6;VCL_PJVERSIONINFO"
