Compatible with Turbo Delphi again.
git-svn-id: https://svn.viathinksoft.com/svn/spacemission@6 2cb2a291-5fe7-405d-a812-557228769704

--- a/SpaceMission.cfg
+++ b/SpaceMission.cfg
@@ -31,8 +31,8 @@
 -M
 -$M16384,1048576
 -K$00400000
--LE"C:\Users\Daniel Marschall\Documents\Borland Studio-Projekte\Bpl"
--LN"C:\Users\Daniel Marschall\Documents\Borland Studio-Projekte\Bpl"
+-LE"C:\Users\user\Documents\Borland Studio-Projekte\Bpl"
+-LN"C:\Users\user\Documents\Borland Studio-Projekte\Bpl"
 -U"VCL_DELPHIX_D6"
 -O"VCL_DELPHIX_D6"
 -I"VCL_DELPHIX_D6"
