--- a/Converter.cfg
+++ b/Converter.cfg
@@ -31,8 +31,8 @@
 -M
 -$M16384,1048576
 -K$00400000
--LE"C:\Users\Daniel Marschall\Documents\Borland Studio-Projekte\Bpl"
--LN"C:\Users\Daniel Marschall\Documents\Borland Studio-Projekte\Bpl"
+-LE"C:\Users\user\Documents\Borland Studio-Projekte\Bpl"
+-LN"C:\Users\user\Documents\Borland Studio-Projekte\Bpl"
 -w-UNSAFE_TYPE
 -w-UNSAFE_CODE
 -w-UNSAFE_CAST
