--- a/LevEdit.dproj
+++ b/LevEdit.dproj
@@ -1,159 +1,103 @@
 ﻿<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-    <PropertyGroup>
-        <ProjectGuid>{599685DA-212E-4FDE-99E7-BC84B6909E31}</ProjectGuid>
-        <MainSource>LevEdit.dpr</MainSource>
-        <Base>True</Base>
-        <Config Condition="'$(Config)'==''">Debug</Config>
-        <TargetedPlatforms>1</TargetedPlatforms>
-        <AppType>Application</AppType>
-        <FrameworkType>VCL</FrameworkType>
-        <ProjectVersion>14.6</ProjectVersion>
-        <Platform Condition="'$(Platform)'==''">Win32</Platform>
-    </PropertyGroup>
-    <PropertyGroup Condition="'$(Config)'=='Base' or '$(Base)'!=''">
-        <Base>true</Base>
-    </PropertyGroup>
-    <PropertyGroup Condition="('$(Platform)'=='Win32' and '$(Base)'=='true') or '$(Base_Win32)'!=''">
-        <Base_Win32>true</Base_Win32>
-        <CfgParent>Base</CfgParent>
-        <Base>true</Base>
-    </PropertyGroup>
-    <PropertyGroup Condition="('$(Platform)'=='Win64' and '$(Base)'=='true') or '$(Base_Win64)'!=''">
-        <Base_Win64>true</Base_Win64>
-        <CfgParent>Base</CfgParent>
-        <Base>true</Base>
-    </PropertyGroup>
-    <PropertyGroup Condition="'$(Config)'=='Release' or '$(Cfg_1)'!=''">
-        <Cfg_1>true</Cfg_1>
-        <CfgParent>Base</CfgParent>
-        <Base>true</Base>
-    </PropertyGroup>
-    <PropertyGroup Condition="'$(Config)'=='Debug' or '$(Cfg_2)'!=''">
-        <Cfg_2>true</Cfg_2>
-        <CfgParent>Base</CfgParent>
-        <Base>true</Base>
-    </PropertyGroup>
-    <PropertyGroup Condition="'$(Base)'!=''">
-        <DCC_UnitSearchPath>VCL_DELPHIX_D6;VCL_PJVERSIONINFO;$(DCC_UnitSearchPath)</DCC_UnitSearchPath>
-        <VerInfo_Locale>1031</VerInfo_Locale>
-        <DCC_N>true</DCC_N>
-        <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
-        <DCC_HIDDEN_VIRTUAL>false</DCC_HIDDEN_VIRTUAL>
-        <DCC_WriteableConstants>true</DCC_WriteableConstants>
-        <DCC_Namespace>Vcl;Vcl.Imaging;Vcl.Touch;Vcl.Samples;Vcl.Shell;System;Xml;Data;Datasnap;Web;Soap;Winapi;$(DCC_Namespace)</DCC_Namespace>
-        <DCC_ImageBase>00400000</DCC_ImageBase>
-        <VerInfo_MinorVer>1</VerInfo_MinorVer>
-        <VerInfo_Keys>CompanyName=ViaThinkSoft;FileDescription=Der Leveleditor zu SpaceMission...;FileVersion=1.1.0.0;InternalName=SpaceMisson 1.1 - Leveleditor;LegalCopyright=© Copyright 2001 - 2007 ViaThinkSoft;LegalTrademarks=Keine;OriginalFilename=LevEdit.exe;ProductName=SpaceMission 1.1;ProductVersion=1.1.0.0;Webseite=www.viathinksoft.de;Projektleiter=Daniel Marschall - www.daniel-marschall.de</VerInfo_Keys>
-        <DCC_E>false</DCC_E>
-        <DCC_Description>SpaceMission 1.1 - Leveleditor</DCC_Description>
-        <DCC_UsePackage>Vcl50;Vclx50;VclSmp50;Vcldb50;vclado50;ibevnt50;Vclbde50;vcldbx50;Qrpt50;TeeUI50;TeeDB50;Tee50;Dss50;TeeQR50;VCLIB50;Vclmid50;vclie50;Inetdb50;Inet50;NMFast50;webmid50;dclocx50;dclaxserver50;DelphiX_for5;pielib;$(DCC_UsePackage)</DCC_UsePackage>
-        <DCC_K>false</DCC_K>
-        <DCC_F>false</DCC_F>
-        <DCC_SymbolReferenceInfo>1</DCC_SymbolReferenceInfo>
-        <DCC_S>false</DCC_S>
-    </PropertyGroup>
-    <PropertyGroup Condition="'$(Base_Win32)'!=''">
-        <VerInfo_Locale>1033</VerInfo_Locale>
-        <DCC_Namespace>System.Win;Data.Win;Datasnap.Win;Web.Win;Soap.Win;Xml.Win;Bde;$(DCC_Namespace)</DCC_Namespace>
-        <Icon_MainIcon>LevEdit_Icon.ico</Icon_MainIcon>
-        <VerInfo_Keys>CompanyName=;FileDescription=;FileVersion=1.0.0.0;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProductName=;ProductVersion=1.0.0.0;Comments=</VerInfo_Keys>
-        <Manifest_File>$(BDS)\bin\default_app.manifest</Manifest_File>
-        <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
-    </PropertyGroup>
-    <PropertyGroup Condition="'$(Base_Win64)'!=''">
-        <Icon_MainIcon>LevEdit_Icon.ico</Icon_MainIcon>
-    </PropertyGroup>
-    <PropertyGroup Condition="'$(Cfg_1)'!=''">
-        <DCC_SymbolReferenceInfo>0</DCC_SymbolReferenceInfo>
-        <DCC_Define>RELEASE;$(DCC_Define)</DCC_Define>
-        <DCC_LocalDebugSymbols>false</DCC_LocalDebugSymbols>
-        <DCC_DebugInformation>false</DCC_DebugInformation>
-    </PropertyGroup>
-    <PropertyGroup Condition="'$(Cfg_2)'!=''">
-        <DCC_GenerateStackFrames>true</DCC_GenerateStackFrames>
-        <DCC_Define>DEBUG;$(DCC_Define)</DCC_Define>
-        <DCC_Optimize>false</DCC_Optimize>
-    </PropertyGroup>
-    <ItemGroup>
-        <DelphiCompile Include="$(MainSource)">
-            <MainSource>MainSource</MainSource>
-        </DelphiCompile>
-        <DCCReference Include="LevMain.pas">
-            <Form>MainForm</Form>
-        </DCCReference>
-        <DCCReference Include="LevSplash.pas">
-            <Form>SplashForm</Form>
-        </DCCReference>
-        <DCCReference Include="LevSpeicherung.pas">
-            <Form>SpeicherungForm</Form>
-        </DCCReference>
-        <DCCReference Include="ComInfo.pas">
-            <Form>InfoForm</Form>
-        </DCCReference>
-        <DCCReference Include="LevSource.pas">
-            <Form>SourceForm</Form>
-        </DCCReference>
-        <DCCReference Include="LevOptions.pas">
-            <Form>LevelForm</Form>
-        </DCCReference>
-        <DCCReference Include="Global.pas"/>
-        <None Include="LevEdit.todo"/>
-        <BuildConfiguration Include="Debug">
-            <Key>Cfg_2</Key>
-            <CfgParent>Base</CfgParent>
-        </BuildConfiguration>
-        <BuildConfiguration Include="Base">
-            <Key>Base</Key>
-        </BuildConfiguration>
-        <BuildConfiguration Include="Release">
-            <Key>Cfg_1</Key>
-            <CfgParent>Base</CfgParent>
-        </BuildConfiguration>
-    </ItemGroup>
-    <ProjectExtensions>
-        <Borland.Personality>Delphi.Personality.12</Borland.Personality>
-        <Borland.ProjectType>VCLApplication</Borland.ProjectType>
-        <BorlandProject>
-            <Delphi.Personality>
-                <Source>
-                    <Source Name="MainSource">LevEdit.dpr</Source>
-                </Source>
-                <VersionInfo>
-                    <VersionInfo Name="IncludeVerInfo">True</VersionInfo>
-                    <VersionInfo Name="AutoIncBuild">False</VersionInfo>
-                    <VersionInfo Name="MajorVer">1</VersionInfo>
-                    <VersionInfo Name="MinorVer">1</VersionInfo>
-                    <VersionInfo Name="Release">0</VersionInfo>
-                    <VersionInfo Name="Build">0</VersionInfo>
-                    <VersionInfo Name="Debug">False</VersionInfo>
-                    <VersionInfo Name="PreRelease">False</VersionInfo>
-                    <VersionInfo Name="Special">False</VersionInfo>
-                    <VersionInfo Name="Private">False</VersionInfo>
-                    <VersionInfo Name="DLL">False</VersionInfo>
-                    <VersionInfo Name="Locale">1031</VersionInfo>
-                    <VersionInfo Name="CodePage">1252</VersionInfo>
-                </VersionInfo>
-                <VersionInfoKeys>
-                    <VersionInfoKeys Name="CompanyName">ViaThinkSoft</VersionInfoKeys>
-                    <VersionInfoKeys Name="FileDescription">Der Leveleditor zu SpaceMission...</VersionInfoKeys>
-                    <VersionInfoKeys Name="FileVersion">1.1.0.0</VersionInfoKeys>
-                    <VersionInfoKeys Name="InternalName">SpaceMisson 1.1 - Leveleditor</VersionInfoKeys>
-                    <VersionInfoKeys Name="LegalCopyright">© Copyright 2001 - 2007 ViaThinkSoft</VersionInfoKeys>
-                    <VersionInfoKeys Name="LegalTrademarks">Keine</VersionInfoKeys>
-                    <VersionInfoKeys Name="OriginalFilename">LevEdit.exe</VersionInfoKeys>
-                    <VersionInfoKeys Name="ProductName">SpaceMission 1.1</VersionInfoKeys>
-                    <VersionInfoKeys Name="ProductVersion">1.1.0.0</VersionInfoKeys>
-                    <VersionInfoKeys Name="Webseite">www.viathinksoft.de</VersionInfoKeys>
-                    <VersionInfoKeys Name="Projektleiter">Daniel Marschall - www.daniel-marschall.de</VersionInfoKeys>
-                </VersionInfoKeys>
-            </Delphi.Personality>
-            <Platforms>
-                <Platform value="Win32">True</Platform>
-                <Platform value="Win64">False</Platform>
-            </Platforms>
-        </BorlandProject>
-        <ProjectFileVersion>12</ProjectFileVersion>
-    </ProjectExtensions>
-    <Import Project="$(BDS)\Bin\CodeGear.Delphi.Targets" Condition="Exists('$(BDS)\Bin\CodeGear.Delphi.Targets')"/>
-    <Import Project="$(APPDATA)\Embarcadero\$(BDSAPPDATABASEDIR)\$(PRODUCTVERSION)\UserTools.proj" Condition="Exists('$(APPDATA)\Embarcadero\$(BDSAPPDATABASEDIR)\$(PRODUCTVERSION)\UserTools.proj')"/>
+  <PropertyGroup>
+    <ProjectGuid>{c3719792-d463-4c67-a238-ac2b31b77218}</ProjectGuid>
+    <MainSource>LevEdit.dpr</MainSource>
+    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+    <DCC_DCCCompiler>DCC32</DCC_DCCCompiler>
+    <DCC_DependencyCheckOutputName>LevEdit.exe</DCC_DependencyCheckOutputName>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <Version>7.0</Version>
+    <DCC_DebugInformation>False</DCC_DebugInformation>
+    <DCC_WriteableConstants>True</DCC_WriteableConstants>
+    <DCC_LocalDebugSymbols>False</DCC_LocalDebugSymbols>
+    <DCC_SymbolReferenceInfo>0</DCC_SymbolReferenceInfo>
+    <DCC_UnitSearchPath>VCL_DELPHIX_D6</DCC_UnitSearchPath>
+    <DCC_ResourcePath>VCL_DELPHIX_D6</DCC_ResourcePath>
+    <DCC_ObjPath>VCL_DELPHIX_D6</DCC_ObjPath>
+    <DCC_IncludePath>VCL_DELPHIX_D6</DCC_IncludePath>
+    <DCC_Define>RELEASE</DCC_Define>
+    <DCC_Description>SpaceMission 1.1 - Leveleditor</DCC_Description>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <Version>7.0</Version>
+    <DCC_WriteableConstants>True</DCC_WriteableConstants>
+    <DCC_UnitSearchPath>VCL_DELPHIX_D6</DCC_UnitSearchPath>
+    <DCC_ResourcePath>VCL_DELPHIX_D6</DCC_ResourcePath>
+    <DCC_ObjPath>VCL_DELPHIX_D6</DCC_ObjPath>
+    <DCC_IncludePath>VCL_DELPHIX_D6</DCC_IncludePath>
+    <DCC_Define>DEBUG</DCC_Define>
+    <DCC_Description>SpaceMission 1.1 - Leveleditor</DCC_Description>
+  </PropertyGroup>
+  <ProjectExtensions>
+    <Borland.Personality>Delphi.Personality</Borland.Personality>
+    <Borland.ProjectType>VCLApplication</Borland.ProjectType>
+    <BorlandProject>
+<BorlandProject xmlns=""> <Delphi.Personality>   <Parameters>
+      <Parameters Name="UseLauncher">False</Parameters>
+      <Parameters Name="LoadAllSymbols">True</Parameters>
+      <Parameters Name="LoadUnspecifiedSymbols">False</Parameters>
+    </Parameters>
+    <VersionInfo>
+      <VersionInfo Name="IncludeVerInfo">True</VersionInfo>
+      <VersionInfo Name="AutoIncBuild">False</VersionInfo>
+      <VersionInfo Name="MajorVer">1</VersionInfo>
+      <VersionInfo Name="MinorVer">1</VersionInfo>
+      <VersionInfo Name="Release">0</VersionInfo>
+      <VersionInfo Name="Build">0</VersionInfo>
+      <VersionInfo Name="Debug">False</VersionInfo>
+      <VersionInfo Name="PreRelease">False</VersionInfo>
+      <VersionInfo Name="Special">False</VersionInfo>
+      <VersionInfo Name="Private">False</VersionInfo>
+      <VersionInfo Name="DLL">False</VersionInfo>
+      <VersionInfo Name="Locale">1031</VersionInfo>
+      <VersionInfo Name="CodePage">1252</VersionInfo>
+    </VersionInfo>
+    <VersionInfoKeys>
+      <VersionInfoKeys Name="CompanyName">ViaThinkSoft</VersionInfoKeys>
+      <VersionInfoKeys Name="FileDescription">Der Leveleditor zu SpaceMission...</VersionInfoKeys>
+      <VersionInfoKeys Name="FileVersion">1.1.0.0</VersionInfoKeys>
+      <VersionInfoKeys Name="InternalName">SpaceMisson 1.1 - Leveleditor</VersionInfoKeys>
+      <VersionInfoKeys Name="LegalCopyright">© Copyright 2001 - 2006 ViaThinkSoft</VersionInfoKeys>
+      <VersionInfoKeys Name="LegalTrademarks">Keine</VersionInfoKeys>
+      <VersionInfoKeys Name="OriginalFilename">LevEdit.exe</VersionInfoKeys>
+      <VersionInfoKeys Name="ProductName">SpaceMission 1.1</VersionInfoKeys>
+      <VersionInfoKeys Name="ProductVersion">1.1.0.0</VersionInfoKeys>
+      <VersionInfoKeys Name="Webseite">www.viathinksoft.de</VersionInfoKeys>
+      <VersionInfoKeys Name="Projektleiter">Daniel Marschall - www.daniel-marschall.de</VersionInfoKeys>
+    </VersionInfoKeys>
+    <Source>
+      <Source Name="MainSource">LevEdit.dpr</Source>
+    </Source>
+  </Delphi.Personality> </BorlandProject></BorlandProject>
+  </ProjectExtensions>
+  <ItemGroup />
+  <ItemGroup>
+    <DelphiCompile Include="LevEdit.dpr">
+      <MainSource>MainSource</MainSource>
+    </DelphiCompile>
+    <DCCReference Include="ComInfo.pas">
+      <Form>InfoForm</Form>
+    </DCCReference>
+    <DCCReference Include="Global.pas">
+      <Form>$IFEND</Form>
+    </DCCReference>
+    <DCCReference Include="LevMain.pas">
+      <Form>MainForm</Form>
+    </DCCReference>
+    <DCCReference Include="LevOptions.pas">
+      <Form>LevelForm</Form>
+    </DCCReference>
+    <DCCReference Include="LevSource.pas">
+      <Form>SourceForm</Form>
+    </DCCReference>
+    <DCCReference Include="LevSpeicherung.pas">
+      <Form>SpeicherungForm</Form>
+    </DCCReference>
+    <DCCReference Include="LevSplash.pas">
+      <Form>SplashForm</Form>
+    </DCCReference>
+  </ItemGroup>
+  <Import Project="$(MSBuildBinPath)\Borland.Delphi.Targets" />
 </Project>
