--- a/LevEdit.dproj
+++ b/LevEdit.dproj
@@ -57,7 +57,7 @@
         <VerInfo_Keys>CompanyName=ViaThinkSoft;FileDescription=Der Leveleditor zu SpaceMission...;FileVersion=1.1.0.0;InternalName=SpaceMisson 1.1 - Leveleditor;LegalCopyright=© Copyright 2001 - 2006 ViaThinkSoft;LegalTrademarks=Keine;OriginalFilename=LevEdit.exe;ProductName=SpaceMission 1.1;ProductVersion=1.1.0.0;Webseite=www.viathinksoft.de;Projektleiter=Daniel Marschall - www.daniel-marschall.de</VerInfo_Keys>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base_Win32)'!=''">
-        <DCC_Namespace>Winapi;System.Win;Data.Win;Datasnap.Win;Web.Win;Soap.Win;Xml.Win;Bde;$(DCC_Namespace)</DCC_Namespace>
+        <DCC_Namespace>System.Win;Data.Win;Datasnap.Win;Web.Win;Soap.Win;Xml.Win;Bde;$(DCC_Namespace)</DCC_Namespace>
         <BT_BuildType>Debug</BT_BuildType>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
         <VerInfo_Keys>CompanyName=;FileDescription=$(MSBuildProjectName);FileVersion=1.0.0.0;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProductName=$(MSBuildProjectName);ProductVersion=1.0.0.0;Comments=;ProgramID=com.embarcadero.$(MSBuildProjectName)</VerInfo_Keys>
