--- a/SpaceMission.dproj
+++ b/SpaceMission.dproj
@@ -101,6 +101,7 @@
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2_Win32)'!=''">
         <AppDPIAwarenessMode>PerMonitorV2</AppDPIAwarenessMode>
+        <Debugger_RunParams>&quot;C:\Users\dmarschall\AppData\Local\Temp\SpaceMissionTest.sav&quot;</Debugger_RunParams>
     </PropertyGroup>
     <ProjectExtensions>
         <Borland.Personality>Delphi.Personality.12</Borland.Personality>
