--- a/LevEdit.dproj
+++ b/LevEdit.dproj
@@ -79,7 +79,7 @@
         <DCC_WriteableConstants>True</DCC_WriteableConstants>
         <DCC_LocalDebugSymbols>False</DCC_LocalDebugSymbols>
         <DCC_SymbolReferenceInfo>0</DCC_SymbolReferenceInfo>
-        <DCC_UnitSearchPath>VCL_DELPHIX_D6;$(DCC_UnitSearchPath)</DCC_UnitSearchPath>
+        <DCC_UnitSearchPath>VCL_DELPHIX_D6;VCL_MARKDOWN;$(DCC_UnitSearchPath)</DCC_UnitSearchPath>
         <DCC_ResourcePath>VCL_DELPHIX_D6;$(DCC_ResourcePath)</DCC_ResourcePath>
         <DCC_ObjPath>VCL_DELPHIX_D6;$(DCC_ObjPath)</DCC_ObjPath>
         <DCC_IncludePath>VCL_DELPHIX_D6;$(DCC_IncludePath)</DCC_IncludePath>
@@ -92,7 +92,7 @@
     <PropertyGroup Condition="'$(Cfg_2)'!=''">
         <Version>7.0</Version>
         <DCC_WriteableConstants>True</DCC_WriteableConstants>
-        <DCC_UnitSearchPath>VCL_DELPHIX_D6;$(DCC_UnitSearchPath)</DCC_UnitSearchPath>
+        <DCC_UnitSearchPath>VCL_DELPHIX_D6;VCL_MARKDOWN;$(DCC_UnitSearchPath)</DCC_UnitSearchPath>
         <DCC_ResourcePath>VCL_DELPHIX_D6;$(DCC_ResourcePath)</DCC_ResourcePath>
         <DCC_ObjPath>VCL_DELPHIX_D6;$(DCC_ObjPath)</DCC_ObjPath>
         <DCC_IncludePath>VCL_DELPHIX_D6;$(DCC_IncludePath)</DCC_IncludePath>
@@ -102,6 +102,9 @@
     <PropertyGroup Condition="'$(Cfg_2_Win32)'!=''">
         <AppDPIAwarenessMode>PerMonitorV2</AppDPIAwarenessMode>
         <Debugger_RunParams>&quot;Levels\Level 1.lev&quot;</Debugger_RunParams>
+        <VerInfo_MinorVer>0</VerInfo_MinorVer>
+        <VerInfo_Locale>1033</VerInfo_Locale>
+        <VerInfo_Keys>CompanyName=;FileDescription=$(MSBuildProjectName);FileVersion=1.0.0.0;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProductName=$(MSBuildProjectName);ProductVersion=1.0.0.0;Comments=;ProgramID=com.embarcadero.$(MSBuildProjectName)</VerInfo_Keys>
     </PropertyGroup>
     <ProjectExtensions>
         <Borland.Personality>Delphi.Personality.12</Borland.Personality>
@@ -144,6 +147,10 @@
                 <Source>
                     <Source Name="MainSource">LevEdit.dpr</Source>
                 </Source>
+                <Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\dcloffice2k290.bpl">Microsoft Office 2000 Beispiele für gekapselte Komponenten für Automatisierungsserver</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\dclofficexp290.bpl">Microsoft Office XP Beispiele für gekapselte Komponenten für Automation Server</Excluded_Packages>
+                </Excluded_Packages>
             </Delphi.Personality>
             <Platforms>
                 <Platform value="Win32">True</Platform>
@@ -1035,6 +1042,10 @@
         </DCCReference>
         <DCCReference Include="ComLevelReader.pas"/>
         <DCCReference Include="Global.pas"/>
+        <DCCReference Include="ComHilfe.pas">
+            <Form>HilfeForm</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
