More translation fixes
git-svn-id: https://svn.viathinksoft.com/svn/spacemission@92 2cb2a291-5fe7-405d-a812-557228769704

--- a/ENU/LevEdit_DRC.rc
+++ b/ENU/LevEdit_DRC.rc
@@ -502,15 +502,15 @@ BEGIN
 	LevEdit_STitel,	L"SpaceMission Leveleditor"
 	LevEdit_SFileMissing,	L"%s is missing. Please reinstall SpaceMission."
 	Vcl_OleConst_sNoRunningObject,	L"Unable to retrieve a pointer to a running object registered with OLE for %s/%s"
-	Vcl_EdgeConst_SWebViewFailure,	L"Edge-Browser-Steuerelement konnte nicht erstellt werden"
-	Vcl_EdgeConst_SNoWebView,	L"Das zugrunde liegende WebView2-Steuerelement ist nicht initialisiert"
-	IEConst_sNotSupportedByEdge,	L"Vorgang wird vom Edge WebView2-Steuerelement nicht unterst\x00FCtzt"
-	System_RegularExpressionsConsts_SRegExMissingExpression,	L"Ein in RegEx angegebener regul\x00E4rer Ausdruck ist erforderlich"
-	System_RegularExpressionsConsts_SRegExExpressionError,	L"Fehler in regul\x00E4rem Ausdruck bei Offset %d: %s"
-	System_RegularExpressionsConsts_SRegExStudyError,	L"Fehler beim Untersuchen von regex: %s"
-	System_RegularExpressionsConsts_SRegExMatchRequired,	L"\x00DCbereinstimmung erforderlich"
-	System_RegularExpressionsConsts_SRegExStringsRequired,	L"Strings-Parameter darf nicht Nil sein"
-	System_RegularExpressionsConsts_SRegExIndexOutOfBounds,	L"Index \x00FCberschreitet das Maximum (%d)"
+	Vcl_EdgeConst_SWebViewFailure,	L"Edge-Browser control could not be created"
+	Vcl_EdgeConst_SNoWebView,	L"WebView2 control was not initialized"
+	IEConst_sNotSupportedByEdge,	L"Action not supported by Edge WebView2 control"
+	System_RegularExpressionsConsts_SRegExMissingExpression,	L"A regular expression is required in RegEx"
+	System_RegularExpressionsConsts_SRegExExpressionError,	L"Error in regular expression at offset %d: %s"
+	System_RegularExpressionsConsts_SRegExStudyError,	L"Error while evaluating regex: %s"
+	System_RegularExpressionsConsts_SRegExMatchRequired,	L"Match required"
+	System_RegularExpressionsConsts_SRegExStringsRequired,	L"Strings parameter must not be nil"
+	System_RegularExpressionsConsts_SRegExIndexOutOfBounds,	L"Index is greater than maximum (%d)"
 	LevMain_status_info,	L"Hover your mouse cursor over an entity to show its properties"
 	LevMain_SFileError,	L"File cannot be opened by SpaceMission"
 	LevMain_SCaption,	L"SpaceMission %s - Level Editor"
@@ -536,23 +536,23 @@ BEGIN
 	Vcl_Imaging_JConsts_sChangeJPGSize,	L"Cannot change the size of a JPEG image"
 	Vcl_Imaging_JConsts_sJPEGError,	L"JPEG error #%d"
 	Vcl_Imaging_JConsts_sJPEGImageFile,	L"JPEG Image File"
-	Global_SDownloadError,	L"Ein Fehler ist aufgetreten. Wahrscheinlich ist keine Internetverbindung aufgebaut, oder der der ViaThinkSoft-Server vor\x00FCbergehend offline."
-	Global_SNewProgramVersionAvailable,	L"Eine neue Programmversion ist vorhanden. M\x00F6chten Sie diese jetzt herunterladen?"
-	Global_SNoUpdateAvailable,	L"No new program version available."
+	Global_SDownloadError,	L"Could not download version information from the ViaThinkSoft server. Please try again later."
+	Global_SNewProgramVersionAvailable,	L"A new program version is available! Download now?"
+	Global_SNoUpdateAvailable,	L"You are already using the latest version"
 	ComLevelReader_SLevelFileFolder,	L"Levels"
 	ComLevelReader_SLevelFileSubFolder,	L"SpaceMission"
 	ComLevelReader_SExtraContentAfterLine,	L"Line %d is invalid (additional information at line end)"
-	ComLevelReader_SInvalidXCoord,	L"X-Koordinate muss ohne Rest durch %d teilbar sein"
-	ComLevelReader_SInvalidYCoord,	L"Y-Koordinate muss ohne Rest durch %d teilbar sein"
-	ComLevelReader_SInvalidLevelFile,	L"Level-Format nicht unterst\x00FCtzt oder Datei ist besch\x00E4digt"
+	ComLevelReader_SInvalidXCoord,	L"X-Coordinate must be a multiple of %d."
+	ComLevelReader_SInvalidYCoord,	L"Y-Coordinate must be a multiple of %d."
+	ComLevelReader_SInvalidLevelFile,	L"Level file format is not supported or the file is corrupt."
 	ComLevelReader_SEnemyTypeNotImplemented,	L"Enemy type %d not supported (Old game version?)"
 	ComLevelReader_SLevelEnemyLineComment,	L";      Type   XCoord YCoord Lives"
-	ComLevelReader_SInvalidFile,	L"Spielstand-Format nicht unterst\x00FCtzt oder Datei besch\x00E4digt"
+	ComLevelReader_SInvalidFile,	L"Savegame format is not supported or the file is corrupt."
 	LevSpeicherung_SLevelListBox,	L"Level %d"
 	Vcl_Imaging_pnglang_EPNGUnknownCriticalChunkText,	L"This ""Portable Network Graphics"" image contains an unknown critical part which could not be decoded."
 	Vcl_Imaging_pnglang_EPNGUnknownCompressionText,	L"This ""Portable Network Graphics"" image is encoded with an unknown compression scheme which could not be decoded."
 	Vcl_Imaging_pnglang_EPNGUnknownInterlaceText,	L"This ""Portable Network Graphics"" image uses an unknown interlace scheme which could not be decoded."
-	Vcl_Imaging_pnglang_EPNGUnknownColorTypeText,	L"Dieses PNG-Bild (Portable Network Graphics) verwendet einen unbekannten Farbtyp, der nicht decodiert werden konnte."
+	Vcl_Imaging_pnglang_EPNGUnknownColorTypeText,	L"This PNG image (Portable Network Graphics) contains an unknown color type, which could not be decoded."
 	Vcl_Imaging_pnglang_EPNGCannotAssignChunkText,	L"The chunks must be compatible to be assigned."
 	Vcl_Imaging_pnglang_EPNGUnexpectedEndText,	L"This ""Portable Network Graphics"" image is invalid because the decoder found an unexpected end of the file."
 	Vcl_Imaging_pnglang_EPNGNoImageDataText,	L"This ""Portable Network Graphics"" image contains no data."
@@ -564,7 +564,7 @@ BEGIN
 	Vcl_Imaging_pnglang_EPNGHeaderNotPresentText,	L"This operation is not valid because the current image contains no valid header."
 	Vcl_Imaging_pnglang_EInvalidNewSize,	L"The new size provided for image resizing is invalid."
 	Vcl_Imaging_pnglang_EInvalidSpec,	L"The ""Portable Network Graphics"" could not be created because invalid image type parameters have being provided."
-	Vcl_Imaging_pnglang_EPNGInvalidBitDepthText,	L"Das PNG-Bild (Portable Network Graphics) konnte nicht geladen werden, weil das Bild eine ung\x00FCltige Bit-Tiefe verwendet."
+	Vcl_Imaging_pnglang_EPNGInvalidBitDepthText,	L"The PNG image (Portable Network Graphics) could not be loaded, because the image contains an unsupported bit-depth."
 	DXConsts_SInvalidDIB,	L"DIB is invalid"
 	DXConsts_SInvalidDIBBitCount,	L"Bitcount in invalid (%d)"
 	DXConsts_SInvalidDIBPixelFormat,	L"PixelFormat in invalid"
@@ -599,10 +599,10 @@ BEGIN
 	DXConsts_SDisplayModeCannotAcquired,	L"Display mode cannot be acquired"
 	Vcl_Consts_SStyleFormatError,	L"Invalid style format"
 	Vcl_Consts_SStyleHookClassRegistered,	L"Class '%s' is already registered for '%s'"
-	Vcl_Consts_SStyleHookClassNotRegistered,	L"Klasse '%s' ist f\x00FCr '%s' nicht registriert"
+	Vcl_Consts_SStyleHookClassNotRegistered,	L"Class '%s' is not registered for '%s'"
 	Vcl_Consts_SStyleInvalidParameter,	L"Parameter %s must not me nil"
-	Vcl_Consts_SStyleFeatureNotSupported,	L"Funktion wird von diesem Stil nicht unterst\x00FCtzt"
-	Vcl_Consts_SStyleNotRegistered,	L"Der Stil '%s' ist nicht registriert"
+	Vcl_Consts_SStyleFeatureNotSupported,	L"Function is not supported by this style"
+	Vcl_Consts_SStyleNotRegistered,	L"The style '%s' is not registered"
 	Vcl_Consts_SStyleUnregisterError,	L"Die Registrierung des Systemstils kann nicht aufgehoben werden"
 	Vcl_Consts_SStyleNotRegisteredNoName,	L"Style not registered"
 	Vcl_Consts_sBeginInvokeNoHandle,	L"BeginInvoke kann nicht ohne \x00FCbergeordnetes Element oder Fenster-Handle aufgerufen werden"
@@ -773,8 +773,8 @@ BEGIN
 	System_RTLConsts_SWindows8Point1,	L"Windows 8.1"
 	System_RTLConsts_SWindows10,	L"Windows 10"
 	System_RTLConsts_SWindows11,	L"Windows 11"
-	System_RTLConsts_SGenericItemNotFound,	L"Eintrag nicht gefunden"
-	System_RTLConsts_SGenericDuplicateItem,	L"Duplikate nicht zul\x00E4ssig"
+	System_RTLConsts_SGenericItemNotFound,	L"Entry not found"
+	System_RTLConsts_SGenericDuplicateItem,	L"Duplicates are not allowed"
 	System_RTLConsts_SInsufficientRtti,	L"Unzureichende RTTI zur Unterst\x00FCtzung dieser Operation verf\x00FCgbar"
 	System_RTLConsts_SParameterCountMismatch,	L"Parameteranzahl stimmt nicht \x00FCberein"
 	System_RTLConsts_SNonPublicType,	L"Typ '%s' ist im interface-Abschnitt einer Unit nicht deklariert"
@@ -847,18 +847,18 @@ BEGIN
 	System_RTLConsts_SInvalidRegType,	L"Invalid data type for '%s'"
 	System_RTLConsts_SListCapacityError,	L"List capacity out of bounds (%d)"
 	System_RTLConsts_SListCountError,	L"List count out of bounds (%d)"
-	System_RTLConsts_SListIndexError,	L"Listenindex au\x00DFerhalb des g\x00FCltigen Bereichs (%d)"
-	System_RTLConsts_SListIndexErrorRangeReason,	L". %s-Bereich ist 0..%d"
-	System_RTLConsts_SListIndexErrorEmptyReason,	L". %s ist leer"
+	System_RTLConsts_SListIndexError,	L"Index outside valid range (%d)"
+	System_RTLConsts_SListIndexErrorRangeReason,	L". %s range is 0..%d"
+	System_RTLConsts_SListIndexErrorEmptyReason,	L". %s is empty"
 	System_RTLConsts_SMemoryStreamError,	L"Out of memory while expanding memory stream"
 	System_RTLConsts_SNoComSupport,	L"%s has not been registered as a COM class"
 	System_RTLConsts_SPropertyException,	L"Error reading %s%s%s: %s"
 	System_SysConst_SInvalidCharCount,	L"Invalid count (%d)"
 	System_SysConst_SInvalidDestinationIndex,	L"Invalid destination index (%d)"
 	System_SysConst_SInvalidCodePage,	L"Invalid code page"
-	System_SysConst_SInvalidEncodingName,	L"Ung\x00FCltiger Codierungsname"
+	System_SysConst_SInvalidEncodingName,	L"Invalid coding name"
 	System_SysConst_SNoMappingForUnicodeCharacter,	L"Keine Zuordnung f\x00FCr Unicode-Zeichen in der Multibyte-Zielcodeseite vorhanden"
-	System_SysConst_SInvalidStringBaseIndex,	L"Ung\x00FCltiger StringBaseIndex"
+	System_SysConst_SInvalidStringBaseIndex,	L"Invalid StringBaseIndex"
 	System_RTLConsts_SAncestorNotFound,	L"Ancestor for '%s' not found"
 	System_RTLConsts_SAssignError,	L"Cannot assign a %s to a %s"
 	System_RTLConsts_SBitsIndexError,	L"Bits index out of range"
@@ -868,7 +868,7 @@ BEGIN
 	System_RTLConsts_SDuplicateClass,	L"A class named %s already exists"
 	System_RTLConsts_SDuplicateItem,	L"List does not allow duplicates ($0%x)"
 	System_RTLConsts_SDuplicateName,	L"A component named %s already exists"
-	System_RTLConsts_SDuplicateString,	L"In der String-Liste sind Duplikate nicht zul\x00E4ssig"
+	System_RTLConsts_SDuplicateString,	L"Duplicates are not allowed in a StringList"
 	System_SysConst_SShortDayNameWed,	L"Wed"
 	System_SysConst_SShortDayNameThu,	L"Thu"
 	System_SysConst_SShortDayNameFri,	L"Fri"
@@ -904,7 +904,7 @@ BEGIN
 	System_SysConst_SAssertError,	L"%s (%s, line %d)"
 	System_SysConst_SAbstractError,	L"Abstract Error"
 	System_SysConst_SModuleAccessViolation,	L"Access violation at address %p in module '%s'. %s of address %p"
-	System_SysConst_SOSError,	L"Systemfehler.  Code: %d.\r\n%s%s"
+	System_SysConst_SOSError,	L"System error.  Code: %d.\r\n%s%s"
 	System_SysConst_SUnkOSError,	L"A call to an OS function failed"
 	System_SysConst_SShortMonthNameJan,	L"Jan"
 	System_SysConst_SShortMonthNameFeb,	L"Feb"
@@ -932,12 +932,12 @@ BEGIN
 	System_SysConst_SMonitorLockException,	L"Object lock not owned"
 	System_SysConst_SNoMonitorSupportException,	L"Monitor support function not initialized"
 	System_SysConst_SNotImplemented,	L"Feature not implemented"
-	System_SysConst_SObjectDisposed,	L"Methode f\x00FCr freigegebenes Objekt aufgerufen"
+	System_SysConst_SObjectDisposed,	L"Method called for freed object"
 	System_SysConst_SArgumentMissing,	L"No argument for format '%s'"
 	System_SysConst_SDispatchError,	L"Variant method calls not supported"
 	System_SysConst_SReadAccess,	L"Read"
 	System_SysConst_SWriteAccess,	L"Write"
-	System_SysConst_SExecuteAccess,	L"Ausf\x00FChrung"
+	System_SysConst_SExecuteAccess,	L"Execute"
 	System_SysConst_SInvalidAccess,	L"Invalid access"
 	System_SysConst_SVarArrayCreate,	L"Error creating variant or safe array"
 	System_SysConst_SVarArrayBounds,	L"Variant or safe array index out of bounds"
@@ -962,7 +962,7 @@ BEGIN
 	System_SysConst_SStackOverflow,	L"Stack overflow"
 	System_SysConst_SControlC,	L"Control-C hit"
 	System_SysConst_SPrivilege,	L"Privileged instruction"
-	System_SysConst_SException,	L"Exception %s in Modul %s bei %p.\r\n%s%s\r\n"
+	System_SysConst_SException,	L"Exception %s in module %s at %p.\r\n%s%s\r\n"
 	System_SysConst_SExceptTitle,	L"Application Error"
 	System_SysConst_SInvalidFormat,	L"Format '%s' invalid or incompatible with argument"
 	System_SysConst_SUnknown,	L"<unknown>"
