--- a/ENU/SpaceMission_DRC.rc
+++ b/ENU/SpaceMission_DRC.rc
@@ -545,15 +545,15 @@ BEGIN
 	Vcl_OleConst_SInvalidLicense,	L"License information for %s is invalid"
 	Vcl_OleConst_SNotLicensed,	L"License information for %s not found. You cannot use this control in design mode"
 	Vcl_OleConst_sNoRunningObject,	L"Unable to retrieve a pointer to a running object registered with OLE for %s/%s"
-	Vcl_EdgeConst_SWebViewFailure,	L"Edge-Browser-Steuerelement konnte nicht erstellt werden"
-	Vcl_EdgeConst_SNoWebView,	L"Das zugrunde liegende WebView2-Steuerelement ist nicht initialisiert"
-	IEConst_sNotSupportedByEdge,	L"Vorgang wird vom Edge WebView2-Steuerelement nicht unterst\x00FCtzt"
+	Vcl_EdgeConst_SWebViewFailure,	L"Edge-Browser control cannot be created"
+	Vcl_EdgeConst_SNoWebView,	L"WebView2 control is not initialized"
+	IEConst_sNotSupportedByEdge,	L"Action not supported by Edge WebView2 control"
 	System_RegularExpressionsConsts_SRegExMissingExpression,	L"Ein in RegEx angegebener regul\x00E4rer Ausdruck ist erforderlich"
-	System_RegularExpressionsConsts_SRegExExpressionError,	L"Fehler in regul\x00E4rem Ausdruck bei Offset %d: %s"
-	System_RegularExpressionsConsts_SRegExStudyError,	L"Fehler beim Untersuchen von regex: %s"
-	System_RegularExpressionsConsts_SRegExMatchRequired,	L"\x00DCbereinstimmung erforderlich"
-	System_RegularExpressionsConsts_SRegExStringsRequired,	L"Strings-Parameter darf nicht Nil sein"
-	System_RegularExpressionsConsts_SRegExIndexOutOfBounds,	L"Index \x00FCberschreitet das Maximum (%d)"
+	System_RegularExpressionsConsts_SRegExExpressionError,	L"Error with regular expression at offset %d: %s"
+	System_RegularExpressionsConsts_SRegExStudyError,	L"Error while evaluating: %s"
+	System_RegularExpressionsConsts_SRegExMatchRequired,	L"Match required"
+	System_RegularExpressionsConsts_SRegExStringsRequired,	L"Strings parameter must not be nil"
+	System_RegularExpressionsConsts_SRegExIndexOutOfBounds,	L"Index exceeds maximum (%d)"
 	GamMain_SWeiterMitLeertaste,	L"Continue with spacebar"
 	GamMain_SAppTitle,	L"SpaceMission %s"
 	GamMain_SPauseTitle,	L"%s [Pause]"
@@ -653,11 +653,11 @@ BEGIN
 	DXConsts_SImageNotFound,	L"Image '%s' not found"
 	DXConsts_SWaveNotFound,	L"Wave '%s' not found"
 	DXConsts_SEffectNotFound,	L"Effect '%s' not found"
-	Vcl_Consts_SStyleFormatError,	L"Ung\x00FCltiges Stilformat"
+	Vcl_Consts_SStyleFormatError,	L"Invalid style format"
 	Vcl_Consts_SStyleHookClassRegistered,	L"Class '%s' is already registered for '%s'"
 	Vcl_Consts_SStyleHookClassNotRegistered,	L"Class '%s' is not registered for '%s'"
 	Vcl_Consts_SStyleInvalidParameter,	L"Paramter %s must not be nil"
-	Vcl_Consts_SStyleFeatureNotSupported,	L"Funktion wird von diesem Stil nicht unterst\x00FCtzt"
+	Vcl_Consts_SStyleFeatureNotSupported,	L"Function is not supported by this style"
 	Vcl_Consts_SStyleNotRegistered,	L"Style '%s' is not registered"
 	Vcl_Consts_SStyleUnregisterError,	L"Die Registrierung des Systemstils kann nicht aufgehoben werden"
 	Vcl_Consts_SStyleNotRegisteredNoName,	L"Style not registered"
@@ -744,7 +744,7 @@ BEGIN
 	Vcl_Consts_SVEnhMetafiles,	L"Enhanced Metafiles"
 	Vcl_Consts_SVIcons,	L"Icons"
 	Vcl_Consts_SVBitmaps,	L"Bitmaps"
-	Vcl_Consts_SVTIFFImages,	L"TIFF-Grafiken"
+	Vcl_Consts_SVTIFFImages,	L"TIFF graphics"
 	Vcl_Consts_SMsgDlgWarning,	L"Warning"
 	Vcl_Consts_SMsgDlgError,	L"Error"
 	Vcl_Consts_SMsgDlgInformation,	L"Information"
@@ -760,7 +760,7 @@ BEGIN
 	Vcl_Consts_SNoMDIForm,	L"Formular kann nicht erstellt werden. Aktuell sind keine MDI-Formulare aktiv"
 	Vcl_Consts_SImageCanvasNeedsBitmap,	L"Ein Bild kann nur ge\x00E4ndert werden, wenn es ein Bitmap enth\x00E4lt"
 	Vcl_Consts_SControlParentSetToSelf,	L"A control cannot have itself as its parent"
-	Vcl_Consts_SControlNonMainThreadUsage,	L"Steuerelement '%s' wird nicht f\x00FCr einen Haupt-Thread verwendet"
+	Vcl_Consts_SControlNonMainThreadUsage,	L"Control '%s' cannot be used for a main thread"
 	Vcl_Consts_SOKButton,	L"OK"
 	Vcl_Consts_SCancelButton,	L"Cancel"
 	Vcl_Consts_SYesButton,	L"&Yes"
@@ -776,7 +776,7 @@ BEGIN
 	Vcl_Consts_SParentGivenNotAParent,	L"Parent given is not a parent of '%s'"
 	Vcl_Consts_SMDIChildNotVisible,	L"Cannot hide an MDI Child Form"
 	Vcl_Consts_SVisibleChanged,	L"Cannot change Visible in OnShow or OnHide"
-	Vcl_Consts_SCannotShowModal,	L"Sichtbares Fenster kann nicht in modales ge\x00E4ndert werden"
+	Vcl_Consts_SCannotShowModal,	L"Visible form cannot be changed to a modal form"
 	Vcl_Consts_SScrollBarRange,	L"Scrollbar property out of range"
 	Vcl_Consts_SPropertyOutOfRange,	L"%s property out of range"
 	Vcl_Consts_SMenuIndexError,	L"Menu index out of range"
